Wire up EmailJS on contact form, add phone field, fix email overflow
- Replace PHP mail.php submission with EmailJS (service_f0o7g5i / template_mbfmzrl)
- Add Phone input to match the EmailJS template's {{Phone}} variable
- Fix long email addresses overflowing their box on mobile (min-width:0 + overflow-wrap)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12023,6 +12023,7 @@ textarea {
 }
 .contact__info-content .content {
   min-height: 100px;
+  min-width: 0;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -12051,6 +12052,7 @@ textarea {
   margin-bottom: 0;
   font-size: 24px;
   font-weight: 500;
+  overflow-wrap: anywhere;
 }
 @media (max-width: 1199.98px) {
   .contact__info-content .content .title {
