--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -53,6 +53,7 @@
             }
             & .content {
                 min-height: 100px;
+                min-width: 0;
                 @include flexbox();
                 flex-direction: column;
                 align-items: flex-start;
@@ -74,6 +75,7 @@
                     margin-bottom: 0;
                     font-size: 24px;
                     font-weight: 500;
+                    overflow-wrap: anywhere;
                     @media #{$lg} {
                         font-size: 22px;
                     }
